# QUEBRA

./: CMakeLists.txt
include/glad/: glad.h
src/: main.cpp
src/glad/: glad.c
